// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add new note 1`] = `
Array [
  Object {
    "id": 1,
    "text": "Well done is better than well said. Benjamin Franklin",
  },
  Object {
    "id": 2,
    "text": "Look deep into nature, and then you will understand everything better. Albert Einstein",
  },
  Object {
    "id": 3,
    "text": "Be yourself; everyone else is already taken. Oscar Wilde",
  },
  Object {
    "id": 4,
    "text": "note text",
  },
]
`;

exports[`should return new note 1`] = `
Object {
  "id": 4,
  "text": "note text",
}
`;
